# Diplom-Physcis-ML

./: .gitignore  AGENTS.md  METHODOLOGY_DECISIONS.md  README.md  pyproject.toml
data/: baseline_stress_summary_loao.csv  baseline_stress_summary_loaro.csv  rectangular_dataset_8_20.npz  superellipse_discrete_n_dense_dataset.npz  superellipse_discrete_n_pilot_dataset.npz  superellipse_pilot_dataset.npz
notebooks/: 00_single_dot_sanity.ipynb  01_generate_and_inspect_dataset.ipynb  02_baseline_validation.ipynb  03_superellipse_sanity.ipynb  04_generate_and_inspect_superellipse_pilot.ipynb  05_generate_and_inspect_superellipse_discrete_n_pilot.ipynb  06_baseline_stress_test.ipynb  06b_physical_feature_ablation.ipynb  06c_final_physics_informed_baseline.ipynb  07_physics_sanity_checks.ipynb  08_tiny_mlp_ablation.ipynb  09_residuals_vs_edge_discretization.ipynb  regenerate_thesis_figures_ru.py
reports/: ar_scaling_relative_deviation.csv  department_progress_5min_ru.md  department_progress_5min_ru.pptx  department_progress_5min_ru_notes.md  department_progress_5min_ru_v2_notes.md  department_progress_5min_speaker_notes_ru.md  full_code_physics_math_integrity_audit.md  mlp_ablation_per_fold.csv  mlp_ablation_seed_stability.csv  mlp_ablation_summary.csv  model_error_physical_scale.csv  physics_sanity_checks.csv  results_integrity_audit.md  ridge_oof_point_residuals.csv  ridge_residual_correlations.csv  ridge_residual_hypothesis_summary.csv  ridge_residual_predictor_collinearity.csv
src/: baseline.py  dataset.py  geometry.py  kwant_solver.py  model.py
tests/: test_dataset.py  (+4 more)
(+20 files in other folders)
