[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "diplom-physics-ml"
version = "0.1.0"
description = "Minimal Kwant tight-binding spectra for a 2D rectangular quantum dot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "kwant>=1.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]
